se modifico la vista previa de las imaguenes en el formulario

--- a/front/create-pin.html
+++ b/front/create-pin.html
@@ -15,7 +15,7 @@
                 <div class="pin-container">
                     <label for="file-input" class="imagen-small">
                         <img src="./img/add_photo_alternate_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" class="pin" id="preview-img">
-                        <span id="text-prompt">Elegí una imagen</span>
+                        <span id="text-prompt">Imagen previa</span>
                     </label>
 
                     <input
