se agrego el boton de borrar cuenta (no funciona por problemas del backend) y se agrego el formulario de crear tablero

--- a/front/navbar.html
+++ b/front/navbar.html
@@ -16,7 +16,7 @@
         <div class="sidebar-middle">
             <button class="icon-bar home" aria-label="Inicio">
                 <div class="hover-effect"></div>
-                <img src="img/home_app_logo_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Inicio">
+                <img src="img/house (1).svg" alt="Inicio">
             </button>
             <button class="icon-bar add" aria-label="Agregar" id="add-button">
                 <div class="hover-effect"></div>
@@ -30,15 +30,16 @@
             <div class="dropdown-menu" id="dropdown-menu">
                 <p>Crear</p>
                 <a href="create-pin.html" class="dropdown-item">
-                    <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0IiBmaWxsPSJub25lIj48cGF0aCBkPSJNMTIgMTJWNU0xMiAxMk0xMiAxMlYxOU0xMiAxMkg1TTEyIDEySDE5IiBzdHJva2U9IiMzMzMiIHN0cm9rZS13aWR0aD0iMiIgc3Ryb2tlLWxpbmVjYXA9InJvdW5kIi8+PC9zdmc+" alt="Nueva Publicación">
+                    <img src="./img/pin (1).svg" alt="Nueva Publicación">
                     Nueva Publicación
                 </a>
                 <a href="create-board.html" class="dropdown-item">
-                    <img src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0IiBmaWxsPSJub25lIj48cmVjdCB4PSIzIiB5PSIzIiB3aWR0aD0iMTgiIGhlaWdodD0iMTgiIHJ4PSIyIiBzdHJva2U9IiMzMzMiIHN0cm9rZS13aWR0aD0iMiIvPjwvc3ZnPg==" alt="Crear Tablero">
+                    <img src="./img/table-2 (1).svg" alt="Crear Tablero">
                     Crear Tablero
                 </a>
             </div>
         </div>
+        
         <div class="sidebar-bottom">
             <button class="user-avatar" aria-label="Perfil de usuario" id="profile-button">
                 <img src="img/%5B940%5D%20avatar%20𓂃꙳⋆.jpeg" alt="Foto de usuario">
@@ -46,6 +47,18 @@
         </div>
     </nav>
     <div class="overlay" id="overlay"></div>
+    <div class="form" id="board-form">
+        <div class="form-content">
+            <h2>Crear tablero</h2>
+            <input type="text" id="board-name" placeholder="Nombre del tablero" maxlength="50">
+            <input type="text" id="board-name" placeholder="Etiquetas, ej: arte, dibujos" maxlength="50">
+            <div class="form-actions">
+                <button class="btn-cancel" id="cancel-board">Cancelar</button>
+                <button class="btn-create" id="create-board">Crear</button>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="JS/navbar.js"></script>
 </body>
 </html>
