--- a/front/register.html
+++ b/front/register.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="./css/register.css">
-    <link rel="stylesheet" href="./css/variables.css">
     <link rel="icon" href="img/logo-transp.png" type="image/x-icon">
     <title>Registro</title>
 </head>
