--- a/front/index.html
+++ b/front/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/componentes/card.css">
+     <link rel="stylesheet" href="css/componentes/modal.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="img/logo-transp.png" type="image/x-icon">
     <title>Imago-★</title>
