se agregó un boton de filtros para busquedas

--- a/front/index.html
+++ b/front/index.html
@@ -19,6 +19,9 @@
                         <img src="img/search_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg">
                     </span>
                     <input class="search-input" type="search" aria-label="Buscar contenido"/>
+                    <button type="button" class="btn-filtros" aria-label="Filtros">
+                        <img src="img/page_info_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg">
+                    </button>
                 </form>
 
                 <div class="auth-buttons">
