se agrego la funcion de actualizar estadisticas y se reemplazo la estadisticas de busquedas personalizadas por publicaciones

--- a/front/perfil.html
+++ b/front/perfil.html
@@ -52,10 +52,10 @@
                         <span class="estadistica-label">Tableros</span>
                     </div>
 
-                    <div class="estadistica estadistica-busquedas">
-                        <i class="fa-solid fa-magnifying-glass estadistica-icon"></i>
-                        <span class="estadistica-number" id="estadistica-busquedas">0</span>
-                        <span class="estadistica-label">Búsquedas personalizadas</span>
+                    <div class="estadistica estadistica-publicaciones">
+                        <i class="fa-solid fa-thumbtack estadistica-icon"></i>
+                        <span class="estadistica-number" id="estadistica-publicaciones">0</span>
+                        <span class="estadistica-label">Publicaciones</span>
                     </div>
 
                     <div class="estadistica estadistica-likes">
