se agregaron los endpoints relacionados a los tableros, se muestrasn los tableros en el perfil del usuario, ya funciona el formulario de creacion de tableros y ya se pueden guardar publicaciones en tableros

--- a/front/navbar.html
+++ b/front/navbar.html
@@ -51,7 +51,7 @@
         <div class="form-content">
             <h2>Crear tablero</h2>
             <input type="text" id="board-name" placeholder="Nombre del tablero" maxlength="50">
-            <input type="text" id="board-name" placeholder="Etiquetas, ej: arte, dibujos" maxlength="50">
+            <input type="text" id="board-tags" placeholder="Etiquetas, ej: arte, dibujos" maxlength="50">
             <div class="form-actions">
                 <button class="btn-cancel" id="cancel-board">Cancelar</button>
                 <button class="btn-create" id="create-board">Crear</button>
