Se agregaron dos opciones en el navbar y se mejoro el js

--- a/front/navbar.html
+++ b/front/navbar.html
@@ -22,6 +22,10 @@
                 <div class="hover-effect"></div>
                 <img src="img/add_box_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Agregar">
             </button>
+            <button class="icon-bar boards" aria-label="misTableros">
+                <div class="hover-effect"></div>
+                <img src="img/table-2 (1).svg" alt="tableros">
+            </button>
             <button class="icon-bar search" aria-label="Buscar">
                 <div class="hover-effect"></div>
                 <img src="img/explore_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Buscar">
