--- a/front/navbar.html
+++ b/front/navbar.html
@@ -45,7 +45,7 @@
         
         <div class="sidebar-bottom">
             <button class="user-avatar" aria-label="Perfil de usuario" id="profile-button">
-                <img src="img/%5B940%5D%20avatar%20𓂃꙳⋆.jpeg" alt="Foto de usuario">
+                <img src="img/avatar-default.jpg" alt="Foto de usuario">
             </button>
         </div>
     </nav>
