se agregaron campos para editar el perfil

--- a/front/perfil.html
+++ b/front/perfil.html
@@ -83,8 +83,15 @@
                 </div>
             </div>
 
-            <form id="edit-profile-form" class="edit-modal-form"> <label>Nombre de usuario</label>
+            <form id="edit-profile-form" class="edit-modal-form"> 
+                <label>Nombre de usuario</label>
                 <input type="text" id="edit-nombre">
+
+                <label>Gmail</label>
+                <input type="mail" id="edit-email">
+
+                <label>Fecha de nacimiento</label>
+                <input type="date" id="edit-fecha_nacimiento">
 
                 <label>Contraseña</label>
                 <input type="password" id="edit-contraseña">
